name:                sql-simple-postgresql
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             MIT
license-file:        LICENSE
author:              philopon
maintainer:          philopon.dependence@gmail.com
-- copyright:           
category:            Database
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:     Database.Sql.Simple.PostgreSQL
  build-depends:       base                 >=4.6 && <4.8
                     , text                 >=1.1 && <1.2
                     , sql-simple           >=0.1 && <0.2
                     , postgresql-simple    >=0.2 && <0.3
  ghc-options:         -Wall -O2
  default-language:    Haskell2010
